--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.12",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
-        "tymon/jwt-auth":"~1.0.0-rc.2"
+        "laravel/ui": "^3.2",
+        "tymon/jwt-auth": "~1.0.0-rc.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
